welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:24: error: not found: value vuBiscuit
}while (!vuBiscuit())
         ^Program:3: error: type mismatch;
 found   : Unit
 required: Boolean
do{
^